# talos-reader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
queries/: css.scm  javascript.scm  typescript.scm  unified.scm
src/: error.rs  lib.rs  main.rs  model.rs  scanner.rs  types.rs  writer.rs
src/extractor/: css.rs  js_ts.rs  mod.rs
