[package]
name = "talos"
version = "0.1.0"
edition = "2021"
description = "Signature-focused code summarizer CLI for LLM context preparation"
license = "MIT"
repository = "https://github.com/1337hero/talos-reader"
homepage = "https://github.com/1337hero/talos-reader"
readme = "README.md"
keywords = ["cli", "code-analysis", "signatures", "llm", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]
authors = ["1337Hero <mike@1337hero.com>"]

# Only include the essentials when publishing to crates.io
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "logo.png",
    "src/**",
    "queries/**",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-css = "0.20"
time = { version = "0.3", features = ["formatting"] }
globset = "0.4"

# Optional (for future optimization)
# rayon = "1"
# indicatif = "0.17"
